style: fix logo size on mobile:

--- a/src/components/logo/logo.css
+++ b/src/components/logo/logo.css
@@ -1,6 +1,11 @@
 .logo {
     fill: white;
-    width: 100px;
+    height: 40px;
+
+    @media screen and (min-width: 768px) {
+        width: 100px;
+        height: auto;
+    }
 
     @media screen and (min-width: 1024px) {
         width: 200px;
